--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=.;Initial Catalog=stockdb;Integrated Security=true;Encrypt=false"
+  },
   "AllowedHosts": "*"
 }
